[gd_scene load_steps=16 format=2]

[ext_resource path="res://WorldArt/Grass Tile 1.png" type="Texture" id=1]
[ext_resource path="res://WorldArt/Savanah.png" type="Texture" id=2]
[ext_resource path="res://interface/images/CharacterButton.png" type="Texture" id=3]
[ext_resource path="res://interface/images/PlayButton.png" type="Texture" id=4]
[ext_resource path="res://interface/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://World.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/images/PlayButtonPressed.png" type="Texture" id=7]
[ext_resource path="res://interface/images/CharacterButtonPressed.png" type="Texture" id=8]
[ext_resource path="res://interface/images/XButton.png" type="Texture" id=9]
[ext_resource path="res://interface/images/XButtonPressed.png" type="Texture" id=10]
[ext_resource path="res://interface/CharacterMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://interface/themes/MainTheme.tres" type="Theme" id=12]
[ext_resource path="res://interface/images/TitleScreenText.png" type="Texture" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "Grass Tile 1.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )
mainGameScene = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 208, 96 )
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0 )

[node name="TitleMenu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="TitleMenu"]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -65.3338
margin_top = -9.94178
margin_right = 110.666
margin_bottom = 90.0582
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HboxContainer" type="HBoxContainer" parent="TitleMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = 6.5
margin_right = 50.5
margin_bottom = 38.5
size_flags_horizontal = 4
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TitleMenu/HboxContainer"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayButton" type="TextureButton" parent="TitleMenu/HboxContainer/MarginContainer"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="TitleMenu/HboxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CharacterButton" type="TextureButton" parent="TitleMenu/HboxContainer/MarginContainer2"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer3" type="MarginContainer" parent="TitleMenu/HboxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0

[node name="TextureButton" type="TextureButton" parent="TitleMenu/HboxContainer/MarginContainer3"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="CharacterMenu" parent="." instance=ExtResource( 11 )]
[connection signal="button_up" from="TitleMenu/HboxContainer/MarginContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="TitleMenu/HboxContainer/MarginContainer2/CharacterButton" to="." method="_on_CharacterButton_button_up"]
[connection signal="button_up" from="TitleMenu/HboxContainer/MarginContainer3/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="exit" from="CharacterMenu" to="." method="_on_CharacterMenu_exit"]
